# c4_rust_team_alfaqa

./: .gitignore  Cargo.toml  README.md  c4_snippet.c  test.c
src/: c4.rs  main.rs
