[package]
name = "c4_rust"
version = "0.1.0"
edition = "2021"
authors = ["Meera Alawadhi", "Hamda"]
description = "A Rust implementation of the C4 compiler for lexing and parsing C-like code"
repository = "https://github.com/meeraalawadhi/c4_rust_team_alfaqa"
license = "MIT"
keywords = ["compiler", "lexer", "parser", "c4", "rust"]
categories = ["compilers", "parsing"]

[dependencies]
# No external dependencies required

[dev-dependencies]
# No additional dev dependencies required for tests